--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Fast, Responsive, YouTube Embeds",
   "main": "dist/fryte.min.js",
   "scripts": {
-    "start": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --content-base . --inline",
+    "start": "webpack-dev-server",
+    "build": "webpack --progress",
+    "watch": "webpack --progress --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
