--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-es2015": "^6.6.0",
     "css-loader": "^0.23.1",
     "style-loader": "^0.13.1",
+    "svg-inline-loader": "^0.4.1",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
   }
