--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
   "author": "Will Clardy",
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.7.4",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
-    "css-loader": "^0.23.1",
-    "style-loader": "^0.13.1",
-    "svg-inline-loader": "^0.4.1",
-    "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1"
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.0",
+    "style-loader": "^0.23.1",
+    "svg-inline-loader": "^0.8.0",
+    "webpack": "^4.29.1",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.1.14"
   }
 }
