--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "fryte",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Fast, Responsive, YouTube Embeds",
-  "main": "dist/fryte.min.js",
+  "main": "./src/main.js",
   "scripts": {
-    "start": "webpack-dev-server",
     "build": "webpack --progress",
     "watch": "webpack --progress --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,14 +16,11 @@
   "author": "Will Clardy",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.3.1",
-    "babel-loader": "^8.0.5",
-    "css-loader": "^2.1.0",
-    "style-loader": "^0.23.1",
-    "svg-inline-loader": "^0.8.0",
-    "webpack": "^4.29.1",
-    "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.1.14"
+    "css-loader": "^4.1.1",
+    "standard": "^14.3.4",
+    "style-loader": "^1.2.1",
+    "svg-inline-loader": "^0.8.2",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
   }
 }
